added budget category tests and other model changes